<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1.3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_weight=".4"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".3"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="Earn FREE BITCOIN From Faucet-Games"
                    android:textAlignment="center"
                    android:textColor="#81D4FA"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".7"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/btn_wheel_of_fortune"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:drawableTop="@mipmap/ic_launcher_round"
                    android:text="Fortune Wheel"
                    android:textAllCaps="false"
                    android:textColor="#81D4FA" />

                <Button
                    android:id="@+id/btn_poker"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:drawableTop="@mipmap/ic_launcher_round"
                    android:text="Poker"
                    android:textAllCaps="false"
                    android:textColor="#81D4FA" />

                <Button
                    android:id="@+id/btn_dice"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:drawableTop="@mipmap/ic_launcher_round"
                    android:text="Dice"
                    android:textAllCaps="false"
                    android:textColor="#81D4FA" />

                <Button
                    android:id="@+id/btn_black_jack"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:drawableTop="@mipmap/ic_launcher_round"
                    android:text="Black Jack"
                    android:textAllCaps="false"
                    android:textColor="#81D4FA" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_weight=".4"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".2"
                android:gravity="center_vertical"
                android:text="Referral Program - Earn Bitcoin!"
                android:textAlignment="center"
                android:textColor="#81D4FA"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10sp"
                android:layout_weight=".6"
                android:gravity="center_vertical"
                android:text="@string/srtRef"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".2">

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10sp"
                    android:gravity="center_vertical"
                    android:text="Invitation Link:  "
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_invitation_link"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@+id/tv1"
                    android:gravity="center_vertical"
                    android:text="link appears here"
                    android:textSize="15sp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10sp"
            android:layout_weight=".5"
            android:orientation="vertical"
            android:weightSum="1.1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".2"
                android:text="Earn Bitcoin from surveys"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:textColor="#81D4FA"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".3"
                android:gravity="center_vertical"
                android:text="@string/strSurvey"
                android:textSize="13sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".2"
                android:gravity="center_vertical"
                android:text="@string/wannad"
                android:textSize="18sp"
                android:layout_marginLeft="15sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".2"
                android:gravity="center_vertical"
                android:text="@string/offerDadddy"
                android:textSize="18sp"
                android:layout_marginLeft="15sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".2"
                android:gravity="center_vertical"
                android:text="@string/surveyMonkey"
                android:textSize="18sp"
                android:layout_marginLeft="15sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>